# python-fractions

./: .gitignore  LICENSE  README.md  pyproject.toml
pyfractions/: fraction.py  operations.py  utilities.py
